// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot renders 1`] = `
<div
  className="service-answer-table"
>
  <h3>
    Service Answers
  </h3>
  <table
    className="service-q-a-table"
  >
    <thead
      className="service-q-a-header"
    >
      <tr
        className="service-q-a-table-row"
      >
        <th>
          ID
        </th>
        <th>
          True or False
        </th>
        <th>
          Min Range Answer
        </th>
        <th>
          Max Range Answer
        </th>
        <th>
          Choice Answer
        </th>
        <th>
          Commands
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="service-q-a-input-row"
      >
        <td />
        <td>
          <input
            className="service-answer-input-true-false"
            placeholder="t/f"
            type="text"
            value=""
          />
        </td>
        <td>
          <input
            className="service-answer-input-min-range"
            placeholder="0"
            type="number"
            value=""
          />
        </td>
        <td>
          <input
            className="service-answer-input-max-range"
            placeholder="0"
            type="number"
            value=""
          />
        </td>
        <td>
          <input
            className="service-answer-input-choice"
            placeholder="0"
            type="number"
            value=""
          />
        </td>
        <td
          className="service-q-a-input-buttons"
        >
          <button
            className="service-q-a-add-button"
          >
            Add
          </button>
          <button
            className="service-q-a-update-button"
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          1
        </td>
        <td>
          true
        </td>
        <td />
        <td />
        <td />
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          2
        </td>
        <td>
          false
        </td>
        <td>
          1
        </td>
        <td>
          3
        </td>
        <td>
          2
        </td>
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          3
        </td>
        <td>
          true
        </td>
        <td>
          50
        </td>
        <td>
          100
        </td>
        <td>
          51
        </td>
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination-row"
  >
    <select>
      <option
        value={10}
      >
        10
      </option>
      <option
        value={25}
      >
        25
      </option>
      <option
        value={50}
      >
        50
      </option>
      <option
        value={100}
      >
        100
      </option>
      <option
        value="All"
      >
        All
      </option>
    </select>
    <button
      className="pagination-button"
    >
      Prev
    </button>
    <button
      className="pagination-button"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Snapshot renders when there is date entered into the input boxes 1`] = `
<div
  className="service-answer-table"
>
  <h3>
    Service Answers
  </h3>
  <table
    className="service-q-a-table"
  >
    <thead
      className="service-q-a-header"
    >
      <tr
        className="service-q-a-table-row"
      >
        <th>
          ID
        </th>
        <th>
          True or False
        </th>
        <th>
          Min Range Answer
        </th>
        <th>
          Max Range Answer
        </th>
        <th>
          Choice Answer
        </th>
        <th>
          Commands
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="service-q-a-input-row"
      >
        <td />
        <td>
          <input
            className="service-answer-input-true-false"
            placeholder="t/f"
            type="text"
            value={false}
          />
        </td>
        <td>
          <input
            className="service-answer-input-min-range"
            placeholder="0"
            type="number"
            value={1}
          />
        </td>
        <td>
          <input
            className="service-answer-input-max-range"
            placeholder="0"
            type="number"
            value={3}
          />
        </td>
        <td>
          <input
            className="service-answer-input-choice"
            placeholder="0"
            type="number"
            value={2}
          />
        </td>
        <td
          className="service-q-a-input-buttons"
        >
          <button
            className="service-q-a-add-button"
          >
            Add
          </button>
          <button
            className="service-q-a-update-button"
          >
            Update
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          1
        </td>
        <td>
          true
        </td>
        <td />
        <td />
        <td />
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          2
        </td>
        <td>
          false
        </td>
        <td>
          1
        </td>
        <td>
          3
        </td>
        <td>
          2
        </td>
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr
        className="service-q-a-table-row"
      >
        <td>
          3
        </td>
        <td>
          true
        </td>
        <td>
          50
        </td>
        <td>
          100
        </td>
        <td>
          51
        </td>
        <td>
          <button
            className="service-q-a-show-button"
            onClick={[Function]}
          >
            Show
          </button>
          <button
            className="service-q-a-delete-button"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="pagination-row"
  >
    <select>
      <option
        value={10}
      >
        10
      </option>
      <option
        value={25}
      >
        25
      </option>
      <option
        value={50}
      >
        50
      </option>
      <option
        value={100}
      >
        100
      </option>
      <option
        value="All"
      >
        All
      </option>
    </select>
    <button
      className="pagination-button"
    >
      Prev
    </button>
    <button
      className="pagination-button"
    >
      Next
    </button>
  </div>
</div>
`;
